# IRS-RAG-APP

./: .gitignore  README.md  docker-compose.yml
ai/: .env.example  Dockerfile.api  Makefile  README.md  pyproject.toml
ai/app/: __init__.py
ai/app/api/: __init__.py  deps.py  main.py  routes_admin.py  routes_chat.py
ai/app/core/: __init__.py  config.py  constants.py  logging.py  prompts.py  schemas.py  security.py  utils.py
ai/app/generation/: __init__.py  llm.py  pipeline.py
ai/app/ingestion/: __init__.py  chunker.py  cleaners.py  crawler.py  models.py  parse_html.py  parse_pdf.py  sitemap.py  storage.py
ai/app/scripts/: __init__.py  eval_suite.py  export_snapshot.py  ingest.py  rebuild_index.py
ai/app/tests/: test_chunker.py  test_embed_and_upsert.py  test_rag_pipeline.py
ai/app/tests/data_fixtures/: __init__.py  sample_html.html
ai/app/vector/: __init__.py  embeddings.py  optimized_reranker.py  qdrant_client.py  reranker.py  retriever.py
ai/infra/github-actions/: ci.yml
ai/infra/qdrant/: .gitkeep
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
